Added based folders and page

--- a/index.html
+++ b/index.html
@@ -1,12 +1,32 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-	<meta charset="UTF-8">
-	<title>	</title>
-	<link rel="stylesheet" href="style.css">
+	<meta charset="utf-8" />
+	<!--[if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js"></script><![endif]-->
+	<title></title>
+	<meta name="keywords" content="" />
+	<meta name="description" content="" />
+	<link href="Sources/css/reset.css" rel="stylesheet">
+	<link href="Sources/css/style.css" rel="stylesheet">
 </head>
-<body>	
-	<h1>Заголовок</h1>
-	
+
+<body>
+
+<div class="wrapper">
+
+	<header class="header">
+		<strong>Test</strong> this is header
+	</header><!-- .header-->
+
+	<main class="content">
+		<strong>Test</strong> this is content
+	</main><!-- .content -->
+
+</div><!-- .wrapper -->
+
+<footer class="footer">
+	<strong>Test</strong> this is footer
+</footer><!-- .footer -->
+
 </body>
 </html>
