Update top menu

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 	<meta name="description" content="" />
 	<link href="Sources/css/reset.css" rel="stylesheet">
 	<link href="Sources/css/style.css" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet">
 </head>
 
 <body>
@@ -15,7 +17,30 @@
 <div class="wrapper">
 
 	<header class="header">
-		<strong>Test</strong> this is header
+		<div class="row">
+			<div class="logoImg">
+				<img src="Sources/img/logo.png" id="logo">
+			</div>
+			<nav class="menu">
+				<ul>
+					<li>
+						<a href="#">
+							<i class="material-icons">announcement</i>
+						<a>
+					</li>
+					<li>
+						<a href="#">
+							<i class="material-icons">announcement</i>
+						<a>
+					</li>
+					<li>
+						<a href="#">
+							<i class="material-icons">announcement</i>
+						<a>
+					</li>
+				</ul>
+			</nav>
+		</div>
 	</header><!-- .header-->
 
 	<main class="content">
