--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 	<link href="Sources/css/style.css" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.7.5/angular.min.js"></script>  
+    <script src="Sources/js/main.js"></script>
 </head>
 
 <body>
@@ -45,6 +48,9 @@
 
 	<main class="content">
 		<strong>Test</strong> this is content
+		<div class="test">
+			<button id="startTest">Делай, ТЕСТ!</button>
+		</div>
 	</main><!-- .content -->
 
 </div><!-- .wrapper -->
