--- a/index.html
+++ b/index.html
@@ -11,8 +11,10 @@
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.7.5/angular.min.js"></script>  
-    <script src="Sources/js/main.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.7.5/angular.min.js"></script>
+    <script src="Sources/js/films_info.js"></script>
+    <script src="Sources/js/films.js"></script>  
+    <script src="Sources/js/main.js"></script>    
 </head>
 
 <body>
