--- a/index.html
+++ b/index.html
@@ -51,12 +51,16 @@
 	<main class="content">
 		<div class="test">
 			<!--<div>
-				{{title}}
+				
 				{{year}}
 				{{rating}}
 				{{info}}
 			<div>-->
-			<button id="startTest">Делай, ТЕСТ!</button>
+			<h1>{{currentFilm.title}}</h1>
+			<h2>{{currentFilm.year}}</h2>
+			<h3>{{currentFilm.rating}}</h3>
+			<h4>{{currentFilm.info}}</h4>
+			<button id="startTest" ng-click="randomFilm()">Делай, ТЕСТ!</button>
 		</div>
 	</main><!-- .content -->
 
