--- a/pickGenre.html
+++ b/pickGenre.html
@@ -16,11 +16,27 @@
   <script src="Sources/js/main.js"></script>
 </head>
 <body ng-controller="firstCtrl">
-  <p><input name="age" type="radio" id="mens" value="Мужской"> Мужской</p>
-  <p><input name="age" type="radio" id="girls" value="Женский"> Женский</p>
-  <p><input name="age" type="radio" id="family" value="Семейный"> Семейный</p>
-  <p><input name="age" type="radio" id="none" value="none">Любой</p>
-	<button id="startTest" ng-click="pickAgesButton()">Готово!</button>
-</div>
+  <div class="test">
+    <div class="ages">
+      <div class="pick">
+        <img src="Sources/img/mens.png" alt="Мужские фильмы">
+        <p><input name="age" type="radio" id="mens" value="Мужской"> Мужской</p>
+      </div>
+      <div class="pick">
+        <img src="Sources/img/girls.png" alt="Женские фильмы">
+        <p><input name="age" type="radio" id="girls" value="Женский"> Женский</p>
+      </div>
+      <div class="pick">
+        <img src="Sources/img/family.png" alt="Семейные фильмы">
+        <p><input name="age" type="radio" id="family" value="Семейный"> Семейный</p>
+      </div>
+      <div class="pick">
+        <img src="Sources/img/null.png" alt="Фильмы для всех">
+        <p><input name="age" type="radio" id="none" value="none">Любой</p>
+      </div>
+    </div>
+  	<button id="startTest" ng-click="pickAgesButton()">Готово!</button>
+    </div>
+  </div>
 </body>
 </html>
