Finished Heroes pick

--- a/pickGenre.html
+++ b/pickGenre.html
@@ -19,20 +19,20 @@
   <div class="test">
     <div class="ages">
       <div class="pick">
-        <img src="Sources/img/mens.png" alt="Мужские фильмы">
-        <p><input name="age" type="radio" id="mens" value="Мужской"> Мужской</p>
+        <img src="Sources/img/questions/mens.png" alt="Мужские фильмы">
+        <p class="option"><input name="age" type="radio" id="mens" value="Мужской"> Мужской</p>
       </div>
       <div class="pick">
-        <img src="Sources/img/girls.png" alt="Женские фильмы">
-        <p><input name="age" type="radio" id="girls" value="Женский"> Женский</p>
+        <img src="Sources/img/questions/girls.png" alt="Женские фильмы">
+        <p class="option"><input name="age" type="radio" id="girls" value="Женский"> Женский</p>
       </div>
       <div class="pick">
-        <img src="Sources/img/family.png" alt="Семейные фильмы">
-        <p><input name="age" type="radio" id="family" value="Семейный"> Семейный</p>
+        <img src="Sources/img/questions/family.png" alt="Семейные фильмы">
+        <p class="option"><input name="age" type="radio" id="family" value="Семейный"> Семейный</p>
       </div>
       <div class="pick">
-        <img src="Sources/img/null.png" alt="Фильмы для всех">
-        <p><input name="age" type="radio" id="none" value="none">Любой</p>
+        <img src="Sources/img/questions/null.png" alt="Фильмы для всех">
+        <p class="option"><input name="age" type="radio" id="none" value="none">Любой</p>
       </div>
     </div>
   	<button id="startTest" ng-click="pickAgesButton()">Готово!</button>
