--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 			<h2>{{currentFilm.year}}</h2>
 			<h3>{{currentFilm.rating}}</h3>
 			<h4>{{currentFilm.info}}</h4>
-			<button id="startTest" ng-click="showFilm()">Делай, ТЕСТ!</button>
+			<button class="startTest" ng-click="showFilm()">Делай, ТЕСТ!</button>
 		</div>
 	</main><!-- .content -->
 
