--- a/sliders.html
+++ b/sliders.html
@@ -113,7 +113,7 @@
 			<div id="slider-vertical5" style="height:200px;"></div>
 		</div>
 	</div>
-	<button id="startTest" ng-click="pickGenresButton()">Готово!</button>
+	<button class="startTest" ng-click="pickGenresButton()">Готово!</button>
 </div>
 </body>
 </html>
