--- a/pickGenre.html
+++ b/pickGenre.html
@@ -47,7 +47,7 @@
         </div>
       </div>
     </div>
-  	<button class="startTest" ng-click="pickAgesButton()">Готово!</button>
+  	<button class="startTest" ng-click="pickTypeButton()">Готово!</button>
     </div>
   </div>
 </body>
