--- a/pickFavoriteActors.html
+++ b/pickFavoriteActors.html
@@ -5,15 +5,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>jQuery UI Slider - Vertical slider</title>
   <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
-  <link href="Sources/css/style.css" rel="stylesheet">
+  <link href="sources/css/style.css" rel="stylesheet">
   <!--Подключение Jquery + Angular-->
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.7.5/angular.min.js"></script>
   <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
   <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
   <!--Подключение Js Файлов-->
-  <script src="Sources/js/films_info.js"></script>
-  <script src="Sources/js/films.js"></script>  
-  <script src="Sources/js/main.js"></script>
+  <script src="sources/js/films_info.js"></script>
+  <script src="sources/js/films.js"></script>  
+  <script src="sources/js/main.js"></script>
 </head>
 <body ng-controller="firstCtrl">
   <div class="test">
@@ -27,11 +27,11 @@
         <div class="userPicks">
           <div class="likeDislike">
             <input name="firstActorlike" type="radio" class="radio" id="likeOne" value="like"/>
-            <label for="likeOne" class="option"><img class="like" src="Sources/img/like.png" alt="Лайк"></label>
+            <label for="likeOne" class="option"><img class="like" src="sources/img/like.png" alt="Лайк"></label>
           </div>
           <div class="likeDislike">
             <input name="firstActorlike" type="radio" class="radio" id="dislikeOne" value="dislike"/>
-            <label for="dislikeOne" class="option"><img class="like" src="Sources/img/dislike.png" alt="Дизлайк"></label>
+            <label for="dislikeOne" class="option"><img class="like" src="sources/img/dislike.png" alt="Дизлайк"></label>
           </div>
         </div>
         <p class="titleactor">Жанры:</p>
@@ -50,11 +50,11 @@
         <div class="userPicks">
           <div class="likeDislike">
             <input name="secondActorlike" type="radio" class="radio" id="likeTwo" value="like"/>
-            <label for="likeTwo" class="option"><img class="like" src="Sources/img/like.png" alt="Лайк"></label>
+            <label for="likeTwo" class="option"><img class="like" src="sources/img/like.png" alt="Лайк"></label>
           </div>
           <div class="likeDislike">
             <input name="secondActorlike" type="radio" class="radio" id="dislikeTwo" value="dislike"/>
-            <label for="dislikeTwo" class="option"><img class="like" src="Sources/img/dislike.png" alt="Дизлайк"></label>
+            <label for="dislikeTwo" class="option"><img class="like" src="sources/img/dislike.png" alt="Дизлайк"></label>
           </div>
         </div>
         <p class="titleactor">Жанры:</p>
@@ -73,11 +73,11 @@
         <div class="userPicks">
           <div class="likeDislike">
             <input name="thirdActorlike" type="radio" class="radio" id="likeThree" value="like"/>
-            <label for="likeThree" class="option"><img class="like" src="Sources/img/like.png" alt="Лайк"></label>
+            <label for="likeThree" class="option"><img class="like" src="sources/img/like.png" alt="Лайк"></label>
           </div>
           <div class="likeDislike">
             <input name="thirdActorlike" type="radio" class="radio" id="dislikeThree" value="dislike"/>
-            <label for="dislikeThree" class="option"><img class="like" src="Sources/img/dislike.png" alt="Дизлайк"></label>
+            <label for="dislikeThree" class="option"><img class="like" src="sources/img/dislike.png" alt="Дизлайк"></label>
           </div>
         </div>
         <p class="titleactor">Жанры:</p>
@@ -95,11 +95,11 @@
         <div class="userPicks">
           <div class="likeDislike">
             <input name="fourthActorlike" type="radio" class="radio" id="likeFour" value="like"/>
-            <label for="likeFour" class="option"><img class="like" src="Sources/img/like.png" alt="Лайк"></label>
+            <label for="likeFour" class="option"><img class="like" src="sources/img/like.png" alt="Лайк"></label>
           </div>
           <div class="likeDislike">
             <input name="fourthActorlike" type="radio" class="radio" id="dislikeFour" value="dislike"/>
-            <label for="dislikeFour" class="option"><img class="like" src="Sources/img/dislike.png" alt="Дизлайк"></label>
+            <label for="dislikeFour" class="option"><img class="like" src="sources/img/dislike.png" alt="Дизлайк"></label>
           </div>
         </div>
         <p class="titleactor">Жанры:</p>
