--- a/pickFavoriteHero.html
+++ b/pickFavoriteHero.html
@@ -5,15 +5,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>jQuery UI Slider - Vertical slider</title>
   <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
-  <link href="Sources/css/style.css" rel="stylesheet">
+  <link href="sources/css/style.css" rel="stylesheet">
   <!--Подключение Jquery + Angular-->
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.7.5/angular.min.js"></script>
   <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
   <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
   <!--Подключение Js Файлов-->
-  <script src="Sources/js/films_info.js"></script>
-  <script src="Sources/js/films.js"></script>  
-  <script src="Sources/js/main.js"></script>
+  <script src="sources/js/films_info.js"></script>
+  <script src="sources/js/films.js"></script>  
+  <script src="sources/js/main.js"></script>
 </head>
 <body ng-controller="firstCtrl">
   <div class="test">
@@ -22,7 +22,7 @@
     </div>
     <div class="heroes">
       <div class="pick">     
-        <img src="Sources/img/questions/jack.png" alt="Капитан Джек воробей">
+        <img src="sources/img/questions/jack.png" alt="Капитан Джек воробей">
         <div class="jack">
           <input name="hero" type="radio" class="radio" id="radiojack" value="jack"/>
           <label for="radiojack" class="option">Капитан Джек Воробей</label>
@@ -31,7 +31,7 @@
         
       </div>
       <div class="pick">
-        <img src="Sources/img/questions/john.png" alt="Джон Уик">
+        <img src="sources/img/questions/john.png" alt="Джон Уик">
         <div class="john">
           <input name="hero" type="radio" class="radio" id="radiojohn" value="john"/>
           <label for="radiojohn" class="option">Джон Уик</label>
@@ -40,7 +40,7 @@
         
       </div>
       <div class="pick">
-        <img src="Sources/img/questions/cooper.png" alt="Купер">
+        <img src="sources/img/questions/cooper.png" alt="Купер">
         <div class="cooper">
           <input name="hero" type="radio" class="radio" id="radiocooper" value="cooper"/>
           <label for="radiocooper" class="option">Джозеф Купер</label>
@@ -48,7 +48,7 @@
         <p class="heroinfo">Пилот, инженер, для которого самое главное в жизни - семья.</p>      
       </div>
       <div class="pick">
-        <img src="Sources/img/questions/ventura.png" alt="Эйс Вентура">
+        <img src="sources/img/questions/ventura.png" alt="Эйс Вентура">
         <div class="ventura">
           <input name="hero" type="radio" class="radio" id="radioventura" value="ventura"/>
           <label for="radioventura" class="option">Эйс Вентура</label>
