--- a/pickGenre.html
+++ b/pickGenre.html
@@ -5,42 +5,42 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>jQuery UI Slider - Vertical slider</title>
   <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
-  <link href="Sources/css/style.css" rel="stylesheet">
+  <link href="sources/css/style.css" rel="stylesheet">
   <!--Подключение Jquery + Angular-->
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.7.5/angular.min.js"></script>
   <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
   <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
   <!--Подключение Js Файлов-->
-  <script src="Sources/js/films_info.js"></script>
-  <script src="Sources/js/films.js"></script>  
-  <script src="Sources/js/main.js"></script>
+  <script src="sources/js/films_info.js"></script>
+  <script src="sources/js/films.js"></script>  
+  <script src="sources/js/main.js"></script>
 </head>
 <body ng-controller="firstCtrl">
   <div class="test">
     <div class="ages">
       <div class="pick">
-        <img src="Sources/img/questions/mens.png" alt="Мужские фильмы">
+        <img src="sources/img/questions/mens.png" alt="Мужские фильмы">
         <div class="mensPick">
           <input name="age" type="radio" class="radio" id="mens" value="Мужской"/>
           <label for="mens" class="option">Мужской</label>
         </div>
       </div>
       <div class="pick">
-        <img src="Sources/img/questions/girls.png" alt="Женские фильмы">
+        <img src="sources/img/questions/girls.png" alt="Женские фильмы">
         <div class="girlsPick">
           <input name="age" type="radio" class="radio" id="girls" value="Женский"/>
           <label for="girls" class="option">Женский</label>
         </div>
       </div>
       <div class="pick">
-        <img src="Sources/img/questions/family.png" alt="Семейные фильмы">
+        <img src="sources/img/questions/family.png" alt="Семейные фильмы">
         <div class="familyPick">
           <input name="age" type="radio" class="radio" id="family" value="Семейный"/>
           <label for="family" class="option">Семейный</label>
         </div>
       </div>
       <div class="pick">
-        <img src="Sources/img/questions/null.png" alt="Фильмы для всех">
+        <img src="sources/img/questions/null.png" alt="Фильмы для всех">
         <div class="nonePick">
           <input name="age" type="radio" class="radio" id="none" value="none"/>
           <label for="none" class="option">Любой</label>
