--- a/sliders.html
+++ b/sliders.html
@@ -1,81 +1,72 @@
-<!doctype html>
+<!DOCTYPE html>
 <html ng-app="myApp">
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>jQuery UI Slider - Vertical slider</title>
-  <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
-  <link href="Sources/css/style.css" rel="stylesheet">
-  <!--Подключение Jquery + Angular-->
-  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.7.5/angular.min.js"></script>
-  <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
-  <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
-  <!--Подключение Js Файлов-->
-  <script src="Sources/js/films_info.js"></script>
-  <script src="Sources/js/films.js"></script>  
-  <script src="Sources/js/main.js"></script>
-  <script>
-  $( function() {
-    $( "#slider-vertical" ).slider({
-      orientation: "vertical",
-      range: "min",
-      min: 0,
-      max: 10,
-      value: 5,
-      slide: function( event, ui ) {
-        $( "#amount" ).val( ui.value );
-      }
-    });
-    $( "#amount" ).val( $( "#slider-vertical" ).slider( "value" ) );
-    $( "#slider-vertical2" ).slider({
-      orientation: "vertical",
-      range: "min",
-      min: 0,
-      max: 10,
-      value: 5,
-      slide: function( event, ui ) {
-        $( "#amount2" ).val( ui.value );
-      }
-    });
-    $( "#amount2" ).val( $( "#slider-vertical2" ).slider( "value" ) );
-        $( "#slider-vertical3" ).slider({
-      orientation: "vertical",
-      range: "min",
-      min: 0,
-      max: 10,
-      value: 5,
-      slide: function( event, ui ) {
-        $( "#amount3" ).val( ui.value );
-      }
-    });
-    $( "#amount3" ).val( $( "#slider-vertical3" ).slider( "value" ) );
-    $( "#slider-vertical4" ).slider({
-      orientation: "vertical",
-      range: "min",
-      min: 0,
-      max: 10,
-      value: 5,
-      slide: function( event, ui ) {
-        $( "#amount4" ).val( ui.value );
-      }
-    });
-    $( "#amount4" ).val( $( "#slider-vertical4" ).slider( "value" ) );
-    $( "#slider-vertical5" ).slider({
-      orientation: "vertical",
-      range: "min",
-      min: 0,
-      max: 10,
-      value: 5,
-      slide: function( event, ui ) {
-        $( "#amount5" ).val( ui.value );
-      }
-    });
-    $( "#amount5" ).val( $( "#slider-vertical5" ).slider( "value" ) );
-  } );
-  </script>
+	<meta charset="utf-8" />
+
+	<title>Film Helper - поможим решить что посмотреть сегодня!</title>
+	<meta name="keywords" content="" />
+	<meta name="description" content="" />
+	<!--Подключение Слайдеров-->
+	<link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+	<!--Подключение Css-->
+	<link href="sources/css/style.css" rel="stylesheet">
+	<!--Подключение Jquery + Angular-->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.7.5/angular.min.js"></script>
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+    <!--Подключение Js Файлов-->
+    <script src="sources/js/films_info.js"></script>
+    <script src="sources/js/films.js"></script>  
+    <script src="sources/js/main.js"></script>
+    <script src="sources/js/sliders.js"></script>
+    <!--Подключение Favicon-->
+    <link rel="apple-touch-icon" sizes="76x76" href="sources/img/favicon/apple-touch-icon.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="sources/img/favicon/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="sources/img/favicon/favicon-16x16.png">
+	<link rel="manifest" href="sources/img/favicon/site.webmanifest">
+	<link rel="mask-icon" href="sources/img/favicon/safari-pinned-tab.svg" color="#5bbad5">
+	<meta name="msapplication-TileColor" content="#da532c">
+	<meta name="theme-color" content="#ffffff">    
 </head>
+
 <body ng-controller="firstCtrl">
-<div class="test">
+
+<div class="wrapper">
+
+	<header class="header">
+		<div class="row">
+			<div class="logoImg">
+				<img src="sources/img/logo.png" id="logo">
+			</div>
+			<nav class="menu">
+				<ul>
+					<li>
+						<a href="#" class="selected">
+							Главная
+						<a>
+					</li>
+					<li>
+						<a href="#">
+							Топ-100
+						<a>
+					</li>
+					<li>
+						<a href="top_years.html">
+							Лучшие фильмы года
+						<a>
+					</li>
+					<li>
+						<a href="#">
+							О проекте
+						<a>
+					</li>
+				</ul>
+			</nav>
+		</div>
+	</header><!-- .header-->
+
+	<main class="content">
+		<div class="test" id="testJquery">
 	<div class="sliders">
 		<div id="slider1" class="genre">
 			<p>
@@ -114,6 +105,15 @@
 		</div>
 	</div>
 	<button class="startTest" ng-click="pickGenresButton()">Готово!</button>
-</div>
+	</div>
+	</main><!-- .content -->
+
+</div><!-- .wrapper -->
+
+<footer class="footer">
+	<strong>Test</strong> this is footer
+</footer><!-- .footer -->
+
 </body>
 </html>
+
