--- a/years.html
+++ b/years.html
@@ -4,16 +4,16 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>jQuery UI Slider - Vertical slider</title>
-  <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
-  <link href="Sources/css/style.css" rel="stylesheet">
+  <link href="sources/css/style.css" rel="stylesheet">
   <!--Подключение Jquery + Angular-->
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.7.5/angular.min.js"></script>
   <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
   <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+  <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
   <!--Подключение Js Файлов-->
-  <script src="Sources/js/films_info.js"></script>
-  <script src="Sources/js/films.js"></script>  
-  <script src="Sources/js/main.js"></script>
+  <script src="sources/js/films_info.js"></script>
+  <script src="sources/js/films.js"></script>  
+  <script src="sources/js/main.js"></script>
     <script>
   $( function() {
     $( "#slider-range" ).slider({
@@ -35,7 +35,7 @@
       Фильмы каких годов вам бы хотелось посмотреть?
     </div>
     <div class="imageAges">
-      <img src="Sources/img/kinolenta.jpg" style="width:600px;height: 430px;">
+      <img src="sources/img/kinolenta.jpg" style="width:600px;height: 430px;">
     </div>
     <div class="slidersYears">
     <p class="infoYears">
