--- a/sliders.html
+++ b/sliders.html
@@ -41,13 +41,8 @@
 			<nav class="menu">
 				<ul>
 					<li>
-						<a href="#" class="selected">
+						<a href="index.html" class="selected">
 							Главная
-						<a>
-					</li>
-					<li>
-						<a href="#">
-							Топ-100
 						<a>
 					</li>
 					<li>
@@ -56,7 +51,7 @@
 						<a>
 					</li>
 					<li>
-						<a href="#">
+						<a href="about.html">
 							О проекте
 						<a>
 					</li>
