--- a/top_years.html
+++ b/top_years.html
@@ -1,25 +1,71 @@
- <!DOCTYPE html>
- <html lang="en">
- <head>
- 	<meta charset="UTF-8">
- 	<title>Лучшие фильмы года</title>
- 	<link rel="stylesheet" href="sources/css/timeline.css">
- 	<link rel="stylesheet" href="sources/css/top-year.css">
- 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
- 	<script type="text/javascript" src="sources/js/timeline.js"></script>
+<!DOCTYPE html>
+<html ng-app="myApp">
+<head>
+	<meta charset="utf-8" />
 
- 	<!--Подключение Favicon-->
-    <link rel="apple-touch-icon" sizes="76x76" href="Sources/img/favicon/apple-touch-icon.png">
-	<link rel="icon" type="image/png" sizes="32x32" href="Sources/img/favicon/favicon-32x32.png">
-	<link rel="icon" type="image/png" sizes="16x16" href="Sources/img/favicon/favicon-16x16.png">
+	<title>Film Helper - поможим решить что посмотреть сегодня!</title>
+	<meta name="keywords" content="" />
+	<meta name="description" content="" />
+	<!--Подключение Слайдеров-->
+	<link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+	<!--Подключение Css-->
+	<link href="sources/css/style.css" rel="stylesheet">
+	<!--Подключение Jquery + Angular-->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.7.5/angular.min.js"></script>
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+    <!--Подключение Js Файлов-->
+    <script src="sources/js/films_info.js"></script>
+    <script src="sources/js/films.js"></script>  
+    <script src="sources/js/main.js"></script>
+    <script src="sources/js/sliders.js"></script>
+    <!--Подключение Favicon-->
+    <link rel="apple-touch-icon" sizes="76x76" href="sources/img/favicon/apple-touch-icon.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="sources/img/favicon/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="sources/img/favicon/favicon-16x16.png">
 	<link rel="manifest" href="sources/img/favicon/site.webmanifest">
 	<link rel="mask-icon" href="sources/img/favicon/safari-pinned-tab.svg" color="#5bbad5">
 	<meta name="msapplication-TileColor" content="#da532c">
-	<meta name="theme-color" content="#ffffff"> 
+	<meta name="theme-color" content="#ffffff">  
+	<link rel="stylesheet" href="sources/css/timeline.css">
+ 	<link rel="stylesheet" href="sources/css/top-year.css">
+ 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+ 	<script type="text/javascript" src="sources/js/timeline.js"></script>  
+</head>
 
- </head>
- <body>
- 	<div class="timeline-container timeline-theme-1">
+<body ng-controller="firstCtrl" class="info">
+
+<div class="wrapper">
+
+	<header class="header">
+		<div class="row">
+			<div class="logoImg">
+				<img src="sources/img/logo.png" id="logo">
+			</div>
+			<nav class="menu">
+				<ul>
+					<li>
+						<a href="index.html">
+							Главная
+						<a>
+					</li>
+					<li>
+						<a href="top_years.html" class="selected">
+							Лучшие фильмы года
+						<a>
+					</li>
+					<li>
+						<a href="about.html">
+							О проекте
+						<a>
+					</li>
+				</ul>
+			</nav>
+		</div>
+	</header><!-- .header-->
+
+	<main class="content">
+			<div class="timeline-container timeline-theme-1">
 	  <div class="timeline js-timeline">
 	  	<div data-time="2000">
 	    <div class="timeline-visual">
@@ -493,12 +539,20 @@
 										</div>
                   </div>
 	    </div>
-	  </div>
 	</div>
 	<script type="text/javascript">
 		$('.js-timeline').Timeline({
 			startItem: 'last'
 		});
 	</script>
- </body>
- </html>
+		</div>
+	</main><!-- .content -->
+
+</div><!-- .wrapper -->
+
+<footer class="footer">
+	<strong>Test</strong> this is footer
+</footer><!-- .footer -->
+
+</body>
+</html>
